# cxx-rust-integration

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  license  main.cpp  readme.md
cxx_api/: Cargo.toml  build.rs
cxx_api/src/: lib.rs
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: cxx_api.rs  lib.rs
