[package]
name = "cxx_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
rust_lib = {path="../rust_lib"}
cxx = "1.0.115"

[build-dependencies]
cxx-build = "1.0.115"
